--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -1,33 +1,4 @@
 <h1>Edit an existing todo</h1>
 
-<% if @todo.errors.any? %>
-  <h2>The following errors have prevented the todo from being saved</h2>
-  <ul>
-    <% @todo.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
+<%= render "form" %>
 
-<% end %>
-
-<%= form_for @todo do |f| %>
-
-  <p>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    
-  </p>
-  
-  <p>
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-    
-  </p>
-  
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
-
-<%= link_to "Back to todos listing", todos_path %>
